--- a/style.css
+++ b/style.css
@@ -17,12 +17,22 @@ button {
 }
 
 main {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  justify-items: center;
   position: absolute;
   width: 40%;
   height: 40%;
   left: 30%;
   top: 30%;
-  /* border: 1px solid pink; */
+  border: 1px solid pink;
+}
+
+img {
+  width: 100%;
+  margin: auto 8rem;
+  border: 1px solid blue;
 }
 
 footer {
@@ -30,7 +40,7 @@ footer {
   bottom: 0;
   width: 100vw;
   height: 50px;
-  /* border: 1px solid red; */
+  border: 1px solid red;
   background-color: #f2f2f2;
 }
 
