--- a/style.css
+++ b/style.css
@@ -5,45 +5,77 @@ footer,
 nav,
 ul,
 li,
+div,
 img,
 form,
 input,
 button {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  box-sizing: border-box;
-  list-style: none;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	box-sizing: border-box;
+	list-style: none;
 }
 
 main {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  justify-items: center;
-  position: absolute;
-  width: 40%;
-  height: 40%;
-  left: 30%;
-  top: 30%;
-  border: 1px solid pink;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	position: absolute;
+	width: 50%;
+	height: 40%;
+	left: 25%;
+	top: 25%;
+	border: 1px solid pink;
+}
+
+#logo {
+	border: 1px solid green;
+	width: 100%;
+	height: 40%;
 }
 
 img {
-  width: 100%;
-  margin: auto 8rem;
-  border: 1px solid blue;
+	margin: 0 30%;
+	border: 1px solid blue;
+}
+
+form {
+	border: 1px solid grey;
+	height: 50%;
+	width: 100%;
+}
+
+#input {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: 1px solid deepskyblue;
+	border-radius: 50px;
+	height: 2.5rem;
+	width: 90%;
+	margin: 1rem;
+}
+
+input {
+	border: 1px solid yellow;
+	height: 60%;
+	width: 80%;
+}
+
+button {
+	border: 1px dashed turquoise;
 }
 
 footer {
-  position: absolute;
-  bottom: 0;
-  width: 100vw;
-  height: 50px;
-  border: 1px solid red;
-  background-color: #f2f2f2;
+	position: absolute;
+	bottom: 0;
+	width: 100vw;
+	height: 50px;
+	border: 1px solid red;
+	background-color: #f2f2f2;
 }
 
 li {
-  display: inline;
+	display: inline;
 }
