--- a/style.css
+++ b/style.css
@@ -76,21 +76,21 @@ main {
 	height: 40%;
 	left: 25%;
 	top: 25%;
-	border: 1px solid pink;
+	/* border: 1px solid pink; */
 }
 
 #logoDiv {
-	border: 1px solid green;
+	/* border: 1px solid green; */
 	/* width: 100%;
 	height: 40%; */
 }
 
 #logoDiv img {
-	border: 1px solid blue;
+	/* border: 1px solid blue; */
 }
 
 form {
-	border: 1px solid grey;
+	/* border: 1px solid green; */
 	height: 50%;
 	width: 100%;
 	display: flex;
@@ -110,37 +110,41 @@ form {
 }
 
 #magIco {
-	border: 1px solid red;
+	/* border: 1px solid red; */
 	height: auto;
 	width: 5%;
 	margin: 2%;
 }
 
 input {
-	border: 1px solid yellow;
+	/* border: 1px solid yellow; */
 	height: 60%;
 	width: 80%;
 }
 
 #voiceIcoDiv {
-	border: 1px solid green;
+	/* border: 1px solid green; */
 	width: 4.3%;
 	margin: 0 1.4rem;
 }
 
 #voiceIco {
-	border: 1px solid red;
+	/* border: 1px solid red; */
 	max-width: 100%;
 }
 
 main button {
 	border: 1px dashed transparent;
-	border-radius: 5%;
+	border-radius: 5px;
 	background-color: #f2f2f2;
 	margin: 0 0.5rem;
 	padding: 0.6rem 0.9rem;
 	color: #5f6368;
 	font-size: 0.9rem;
+}
+
+button:hover {
+	box-shadow: 0 1px rgb(80, 80, 80, 0.2);
 }
 
 main button:hover {
