--- a/style.css
+++ b/style.css
@@ -115,6 +115,11 @@ form {
 	box-shadow: 0 1px 5px rgba(124, 124, 124, 0.699);
 }
 
+input[type="search"] {
+	font-size: 1rem;
+	color: #212121;
+}
+
 #magIco {
 	/* border: 1px solid red; */
 	height: auto;
